# godot-keylogger

./: README.md  build.sh
.github/workflows/: build.yaml
godot/: .gitignore  icon.svg.import  main.tscn  project.godot
godot/addons/keylogger/: keylogger.gdextension  keylogger.tscn  plugin.cfg  plugin.gd
rust/: Cargo.toml
rust/src/: lib.rs  linuxbsd.rs  noop.rs
