[package]
name = "godot-keylogger"
version = "0.2.0"
edition = "2021"
rust-version = "1.90"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { version = "0.4.5", features = ["experimental-threads"] }
libc = "0.2.169"
inputbot = { git = "https://github.com/erodozer/InputBot.git", branch = "develop" }
strum = "*"
